--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "5.1.*",
-		"laravelcollective/html": "~5.0"
+		"laravelcollective/html": "~5.0",
+		"barryvdh/laravel-dompdf": "0.6.*",
+		"guzzlehttp/guzzle": "~5.3|~6.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
