--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
 		"laravelcollective/html": "~5.0",
 		"barryvdh/laravel-dompdf": "0.6.*",
 		"guzzlehttp/guzzle": "~5.3|~6.0",
-		"gregoriohc/laravel-trello": "0.2"
+		"gregoriohc/laravel-trello": "0.2",
+		"intervention/image": "2.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
