--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     },
     "autoload": {
         "classmap": [
-            "database"
+            "database/"
         ],
         "psr-4": {
             "App\\": "app/"
