--- a/package.json
+++ b/package.json
@@ -57,9 +57,9 @@
     "@angular/platform-browser-dynamic": "^4.1.2",
     "@angular/router": "^4.1.2",
     "@angular/upgrade": "^4.1.2",
-    "bootstrap-less": "^3.3.8",
+    "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
-    "jquery": "^3.1.1",
+    "jquery": "^3.2.1",
     "reflect-metadata": "^0.1.10",
     "rxjs": "5.0.1",
     "style-loader": "^0.13.1",
