--- a/package.json
+++ b/package.json
@@ -22,26 +22,32 @@
     "babel-plugin-transform-runtime": "^6.12.0",
     "babel-preset-es2015": "6.9.0",
     "babel-runtime": "^6.11.6",
+    "bootstrap-loader": "^2.1.0",
+    "bootstrap-sass": "^3.3.7",
     "clean-webpack-plugin": "^0.1.16",
-    "css-loader": "^0.26.1",
+    "css-loader": "^0.26.4",
     "extract-text-webpack-plugin": "^2.0.0-beta.5",
     "file-loader": "^0.9.0",
     "gulp": "^3.8.8",
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.16.1",
     "jasmine-core": "^2.6.1",
+    "jquery": "^3.2.1",
     "laravel-elixir": "^1.0.0",
+    "node-sass": "^4.5.3",
     "null-loader": "^0.1.1",
     "optimize-css-assets-webpack-plugin": "^1.3.1",
     "raw-loader": "^0.5.1",
+    "resolve-url-loader": "^2.0.2",
     "rimraf": "^2.5.2",
+    "sass-loader": "^6.0.5",
     "style-loader": "^0.13.1",
     "typescript": "^2.3.2",
     "typescript-decorate": "^1.0.0",
     "typescript-extends": "^1.0.1",
     "typescript-metadata": "^1.0.0",
     "typescript-param": "^1.0.0",
-    "url-loader": "^0.5.7",
+    "url-loader": "^0.5.8",
     "webpack-dev-server": "^2.4.1",
     "webpack-manifest-plugin": "^1.1.0",
     "webpack-notifier": "^1.5.0"
