--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "webpack-notifier": "^1.5.0"
   },
   "dependencies": {
+    "@angular/animations": "^4.1.2",
     "@angular/cli": "^1.0.3",
     "@angular/common": "^4.1.2",
     "@angular/compiler": "^4.1.2",
