--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@angular/upgrade": "^4.1.2",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "reflect-metadata": "^0.1.10",
     "rxjs": "5.0.1",
