--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "vue": "^2.1.10"
   },
   "dependencies": {
+    "font-awesome": "^4.7.0",
     "laravel-echo": "^1.3.2",
+    "moment": "^2.18.1",
     "vue-router": "^2.7.0"
   }
 }
