--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "font-awesome": "^4.7.0",
     "laravel-echo": "^1.3.2",
     "moment": "^2.18.1",
+    "sweetalert": "^2.0.8",
     "vue-router": "^2.7.0"
   }
 }
