--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "devDependencies": {
-    "axios": "^0.16.2",
     "bootstrap-sass": "^3.3.7",
     "cross-env": "^5.0.1",
     "jquery": "^3.1.1",
@@ -22,6 +21,9 @@
     "font-awesome": "^4.7.0",
     "laravel-echo": "^1.3.2",
     "moment": "^2.18.1",
+    "request": "^2.83.0",
+    "request-promise": "^4.2.2",
+    "request-promise-native": "^1.0.5",
     "select2": "^4.0.6-rc.1",
     "sweetalert": "^2.0.8",
     "vue-router": "^2.7.0"
