--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
   },
   "dependencies": {
     "font-awesome": "^4.7.0",
+    "fs": "^0.0.1-security",
     "laravel-echo": "^1.3.2",
     "moment": "^2.18.1",
+    "net": "^1.0.2",
     "request": "^2.83.0",
     "request-promise": "^4.2.2",
     "request-promise-native": "^1.0.5",
     "select2": "^4.0.6-rc.1",
     "sweetalert": "^2.0.8",
+    "tls": "^0.0.1",
     "vue-router": "^2.7.0"
   }
 }
