--- a/package.json
+++ b/package.json
@@ -10,25 +10,19 @@
     "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "devDependencies": {
+    "axios": "^0.17.1",
     "bootstrap-sass": "^3.3.7",
     "cross-env": "^5.0.1",
     "jquery": "^3.1.1",
     "laravel-mix": "^1.0",
     "lodash": "^4.17.4",
-    "vue": "^2.1.10"
+    "vue": "^2.5.0"
   },
   "dependencies": {
     "font-awesome": "^4.7.0",
-    "fs": "^0.0.1-security",
-    "laravel-echo": "^1.3.2",
     "moment": "^2.18.1",
-    "net": "^1.0.2",
-    "request": "^2.83.0",
-    "request-promise": "^4.2.2",
-    "request-promise-native": "^1.0.5",
     "select2": "^4.0.6-rc.1",
     "sweetalert": "^2.0.8",
-    "tls": "^0.0.1",
     "vue-router": "^2.7.0"
   }
 }
