--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "moment": "^2.18.1",
     "select2": "^4.0.6-rc.1",
     "sweetalert": "^2.0.8",
-    "vue-router": "^2.7.0"
+    "vue-router": "^2.7.0",
+    "vuex": "^3.0.1"
   }
 }
