--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "barryvdh/laravel-dompdf": "^0.8.3",
         "doctrine/dbal": "^2.5",
         "fideloper/proxy": "~3.3",
+        "gregoriohc/laravel-trello": "^0.3.0",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0"
     },
