--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "font-awesome": "^4.7.0",
     "moment": "^2.18.1",
+    "node-sass": "^4.10.0",
     "select2": "^4.0.6-rc.1",
     "sweetalert": "^2.0.8",
     "vue-bootstrap-datetimepicker": "^4.1.4",
