--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,11 @@
     },
     "require-dev": {
         "filp/whoops": "~2.0",
+        "friendsofphp/php-cs-fixer": "^2.13",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~6.0"
+        "phpunit/phpunit": "~6.0",
+        "squizlabs/php_codesniffer": "^3.3"
     },
     "autoload": {
         "classmap": [
