--- a/package.json
+++ b/package.json
@@ -3,30 +3,34 @@
   "scripts": {
     "dev": "npm run development",
     "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "watch": "npm run development -- --watch",
     "watch-poll": "npm run watch -- --watch-poll",
     "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
     "prod": "npm run production",
-    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "devDependencies": {
-    "axios": "^0.17.1",
-    "bootstrap-sass": "^3.3.7",
-    "cross-env": "^5.0.1",
-    "jquery": "^3.1.1",
-    "laravel-mix": "^1.0",
-    "lodash": "^4.17.4",
-    "vue": "^2.5.0"
+    "axios": "^0.19",
+    "bootstrap": "^4.1.0",
+    "bootstrap-sass": "^3.4.1",
+    "cross-env": "^7.0",
+    "jquery": "^3.2",
+    "laravel-mix": "^5.0.1",
+    "lodash": "^4.17.19",
+    "popper.js": "^1.12",
+    "resolve-url-loader": "^3.1.2",
+    "sass": "^1.15.2",
+    "sass-loader": "^7.1.0",
+    "vue": "^2.5.17",
+    "vue-template-compiler": "^2.6.12"
   },
   "dependencies": {
     "font-awesome": "^4.7.0",
     "moment": "^2.18.1",
-    "node-sass": "^4.10.0",
     "select2": "^4.0.6-rc.1",
     "sweetalert": "^2.0.8",
     "vue-bootstrap-datetimepicker": "^4.1.4",
     "vue-full-calendar": "^4.0.0-1",
-    "vue-router": "^2.7.0",
-    "vuex": "^3.0.1"
+    "vue-router": "^2.7.0"
   }
 }
