--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "font-awesome": "^4.7.0",
     "moment": "^2.18.1",
     "select2": "^4.0.6-rc.1",
-    "sweetalert": "^2.0.8",
+    "sweetalert2": "^10.15.5",
     "vue-bootstrap-datetimepicker": "^4.1.4",
     "vue-full-calendar": "^4.0.0-1",
     "vue-router": "^2.7.0"
