--- a/composer.json
+++ b/composer.json
@@ -5,20 +5,21 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": "^7.4.3",
-        "barryvdh/laravel-dompdf": "^0.8.3",
+        "php": "^7.4|^8.0",
+        "barryvdh/laravel-dompdf": "^0.9.0",
         "doctrine/dbal": "^2.5",
-        "fideloper/proxy": "^4.0",
-        "gregoriohc/laravel-trello": "^0.3.0",
-        "laravel/framework": "5.8.*",
-        "laravel/tinker": "~1.0"
+        "fideloper/proxy": "^4.4",
+        "laravel/framework": "6.20.*",
+        "laravel/tinker": "^2.5"
     },
     "require-dev": {
+        "facade/ignition": "^1.16.15",
         "filp/whoops": "~2.0",
         "friendsofphp/php-cs-fixer": "^2.13",
-        "fzaninotto/faker": "~1.4",
-        "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "^7.0",
+        "fakerphp/faker": "^1.9.1",
+        "mockery/mockery": "^1.0",
+        "nunomaduro/collision": "^3.0",
+        "phpunit/phpunit": "^8.5.8|^9.3.3",
         "squizlabs/php_codesniffer": "^3.3"
     },
     "autoload": {
@@ -56,5 +57,10 @@
         "preferred-install": "dist",
         "sort-packages": true,
         "optimize-autoloader": true
+    },
+    "extra": {
+        "laravel": {
+            "dont-discover": []
+        }
     }
 }
