--- a/composer.json
+++ b/composer.json
@@ -7,24 +7,26 @@
     "require": {
         "php": "^7.4|^8.0",
         "barryvdh/laravel-dompdf": "^0.9.0",
-        "doctrine/dbal": "^2.5",
+        "fruitcake/laravel-cors": "^2.0",
+        "guzzlehttp/guzzle": "^6.3.1|^7.0.1",
         "fideloper/proxy": "^4.4",
-        "laravel/framework": "6.20.*",
+        "laravel/framework": "^7.29",
         "laravel/tinker": "^2.5"
     },
     "require-dev": {
-        "facade/ignition": "^1.16.15",
+        "facade/ignition": "^2.0",
         "filp/whoops": "~2.0",
         "friendsofphp/php-cs-fixer": "^2.13",
         "fakerphp/faker": "^1.9.1",
-        "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^3.0",
+        "mockery/mockery": "^1.3.1",
+        "nunomaduro/collision": "^4.3",
         "phpunit/phpunit": "^8.5.8|^9.3.3",
         "squizlabs/php_codesniffer": "^3.3"
     },
     "autoload": {
         "classmap": [
-            "database"
+            "database/seeds",
+            "database/factories"
         ],
         "psr-4": {
             "App\\": "app/"
@@ -36,21 +38,15 @@
         }
     },
     "scripts": {
-        "post-root-package-install": [
-            "php -r \"file_exists('.env') || copy('.env.example', '.env');\""
-        ],
-        "post-create-project-cmd": [
-            "php artisan key:generate"
-        ],
-        "post-install-cmd": [
-            "Illuminate\\Foundation\\ComposerScripts::postInstall"
-        ],
-        "post-update-cmd": [
-            "Illuminate\\Foundation\\ComposerScripts::postUpdate"
-        ],
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
-            "@php artisan package:discover"
+            "@php artisan package:discover --ansi"
+        ],
+        "post-root-package-install": [
+            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
+        ],
+        "post-create-project-cmd": [
+            "@php artisan key:generate --ansi"
         ]
     },
     "config": {
