--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,8 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": "^7.4|^8.0",
-        "barryvdh/laravel-dompdf": "^2.0",
+        "php": "^8.1",
+        "barryvdh/laravel-dompdf": "^0.9.0",
         "doctrine/dbal": "^2.12.1",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
