--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -1,15 +1,19 @@
-FROM php:7.4-fpm
+FROM php:8.1-fpm
 
+COPY docker/php/xdebug /xdebug
+EXPOSE 9003
 
 RUN apt update && apt install -y zlib1g-dev g++ git libicu-dev zip libzip-dev libmagickwand-dev libmagickcore-dev sendmail  zlib1g-dev zip nodejs npm \
     && docker-php-ext-install intl opcache pdo pdo_mysql \
     && pecl install apcu \
     && pecl install imagick \
+    && pecl install xdebug \
     && docker-php-ext-enable apcu \
     && docker-php-ext-enable imagick \
     && docker-php-ext-configure zip \
     && docker-php-ext-install gd \
-    && docker-php-ext-install zip
+    && docker-php-ext-install zip \
+    && docker-php-ext-enable xdebug
 
 WORKDIR /var/www/app
 
