--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
     build:
       context: .
       dockerfile: docker/php/Dockerfile
+    ports:
+      - '9000:9000'
     volumes:
       - .:/var/www/app
     depends_on:
