--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": "^8.1",
+        "php": "^7.4|^8.0",
         "barryvdh/laravel-dompdf": "^0.9.0",
         "doctrine/dbal": "^2.12.1",
         "fideloper/proxy": "^4.4",
