--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "sweetalert2": "^10.15.5",
     "vue-bootstrap-datetimepicker": "^4.1.4",
     "vue-full-calendar": "^4.0.0-1",
+    "vue-i18n": "^8.27.2",
     "vue-router": "^2.7.0"
   }
 }
