--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -29,6 +29,7 @@ jobs:
         mkdir -p storage
         touch ./storage/database.sqlite
         chmod 777 ./storage/database.sqlite
+        php artisan db-refresh
     - name: Execute tests (Unit and Feature tests) via PHPUnit
       env:
         DB_CONNECTION: testing
