--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -28,10 +28,8 @@ jobs:
       run: |
         mkdir -p storage
         touch ./storage/database.sqlite
-        chmod 777 ./storage/database.sqlite
-        php artisan migrate:refresh --seed
     - name: Execute tests (Unit and Feature tests) via PHPUnit
       env:
         DB_CONNECTION: testing
         DB_DATABASE: database/database.sqlite
-      run: vendor/bin/phpunit
+      run: php artisan test
